# projekt-2-Marcin-Platek

./: CMakeLists.txt
include/: Dziekanat.hpp  Prowadzacy.hpp  Student.hpp  Zajecia.hpp
src/: Dziekanat.cpp  Prowadzacy.cpp  Student.cpp  Zajecia.cpp  main.cpp
